--- a/styles/style.css
+++ b/styles/style.css
@@ -26,11 +26,11 @@ body {
     color:white;
     padding:5px;
     font-family:Arial;
+
 }
 
 #pass {
     height:20px;
     line-height:20px;
-    margin-top:10px;
-    margin-left:10px;
+    margin:10px;
 }
